# advent_of_code

./: .gitignore  Cargo.toml  README.md
2021/src/: main.rs
2021/src/common/: solution.rs
2021/src/day_01/: solution.rs
2021/src/day_02/: solution.rs
2021/src/day_03/: mod.rs
2021/src/day_04/: solution.rs
2021/src/day_05/: mod.rs
2021/src/day_07/: solution.rs
aoc_2021/: .gitignore  Cargo.toml  README.md
aoc_2021/src/common/: mod.rs
aoc_2021/src/day_01/: mod.rs
aoc_2021/src/day_04/: mod.rs
aoc_2021/src/day_05/: solution.rs
aoc_2022/: Cargo.toml  README.md  add_day.sh  makefile
aoc_2022/src/: main.rs
aoc_2022/src/day_00/: mod.rs  solution.rs
aoc_2022/src/day_01/: solution.rs
aoc_2022/src/days/: day_00.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  mod.rs
aoc_2022/src/presentation/: mod.rs  presentation.rs
aoc_2022/src/solution/: mod.rs  presentation.rs  solution.rs
aoc_2022/src/test_utils/: validator.rs
aoc_2022/src/utils/: presentation.rs  printer.rs  reader.rs  solution.rs  timer.rs  validator.rs
aoc_2023/: .bazelrc  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  conanfile.txt  download  new_day  profile.txt
aoc_2023/main/: BUILD  BUILD.bazel  main.cpp
aoc_2023/main/days/00/: day_00.cpp  day_00.h
aoc_2023/main/days/01/: day_01.cpp  day_01.h
aoc_2023/main/days/02/: day_02.cpp  day_02.h
aoc_2023/main/days/03/: day_03.cpp  day_03.h
aoc_2023/main/days/04/: day_04.cpp  day_04.h
aoc_2023/main/days/05/: day_05.cpp  day_05.h
aoc_2023/main/days/06/: day_06.cpp  day_06.h
aoc_2023/main/days/07/: day_07.cpp  day_07.h
aoc_2023/main/days/08/: day_08.cpp  day_08.h
aoc_2023/main/days/09/: day_09.cpp  day_09.h
aoc_2023/main/days/10/: day_10.cpp  day_10.h
aoc_2023/main/days/11/: day_11.cpp  day_11.h
aoc_2023/main/days/12/: day_12.cpp  day_12.h
aoc_2023/main/days/13/: day_13.cpp  day_13.h
aoc_2023/main/days/14/: day_14.cpp  day_14.h
aoc_2023/main/days/15/: day_15.cpp  day_15.h
aoc_2023/main/days/16/: day_16.cpp  day_16.h
aoc_2023/main/days/17/: day_17.cpp  day_17.h
aoc_2023/main/days/18/: day_18.cpp  day_18.h
aoc_2023/main/days/19/: day_19.cpp  day_19.h
aoc_2023/main/days/20/: day_20.cpp  day_20.h
aoc_2023/main/days/21/: day_21.cpp  day_21.h
aoc_2023/main/days/N01/: day_N01.cpp  day_N01.h
aoc_2023/main/days/template/: day_00.cpp  day_00.h
aoc_2023/main/solution/: constraints.h  day.h  measurer.h  printer.h  reader.cpp  reader.h  solution.h  string_utils.cpp  string_utils.h
aoc_2023/main/utils/: cartesian_product.h
aoc_2023/src/: CMakeLists.txt  main.cpp
aoc_2023/src/days/00/: day_00.cpp  day_00.h  input.txt
aoc_2023/src/example/: example.h
aoc_2023/src/solution/: printer.h  reader.h  runner.h  solution.h
aoc_2023/test/: BUILD  BUILD.bazel  CMakeLists.txt  main.cpp  test.cpp
aoc_2023/test/days/: day00.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  dayN01.cpp  dayTest.cpp
aoc_2023/test/solution/: input.txt  measurer.cpp  reader.cpp  solution.cpp
aoc_2024/: README.md  aoc_2024-dev-1.rockspec  hello.lua  hello.test.lua
aoc_2024/day_01/: day_01.lua  part1.lua
aoc_2024/day_02/: day_02.lua
aoc_2024/day_03/: day_03.lua
aoc_2024/day_04/: day_04.lua
aoc_2024/day_05/: day_05.lua
aoc_2024/day_06/: day_06.lua
aoc_2024/day_07/: day_07.lua
aoc_2024/day_08/: day_08.lua
aoc_2024/day_09/: day_09.lua
aoc_2024/day_10/: day_10.lua
aoc_2024/day_11/: day_11.lua
aoc_2024/day_12/: day_12.lua
aoc_2024/day_13/: day_13.lua
aoc_2024/day_14/: day_14.lua
aoc_2024/day_15/: day_15.lua
aoc_2024/day_16/: day_16.lua
aoc_2024/template/: day_xx.lua
aoc_2024/utils/: read_file.lua  timing.lua
aoc_2025/: README.md  build.zig  build.zig.zon  main.zig
aoc_2025/src/: main.zig  test.zig
aoc_2025/src/days/: day00.zig  day01.zig  day01x2020.zig  day02.zig  day02x2020.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig
aoc_2025/src/practice/: day01x2020.zig  day02x2020.zig  day03x2020.zig
aoc_2025/src/util/: day.zig  io.zig  out.zig  parser.zig  run.zig  runner.zig  time.zig  tree.zig  validate.zig
src/: main.rs
src/common/: mod.rs  solution.rs
src/day_01/: input.rs  mod.rs  solution.rs
src/day_02/: input.rs  mod.rs  solution.rs
src/day_03/: solution.rs
src/day_04/: solution.rs
src/day_05/: solution.rs
src/day_06/: mod.rs  solution.rs
src/day_07/: mod.rs  solution.rs
