load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "gtest",
    branch = "v1.14.x",
    remote = "https://github.com/google/googletest",
)

git_repository(
    name = "range_v3",
    commit = "97452bb3eb74a73fc86504421a6a27c92bce6b99",
    remote = "https://github.com/ericniebler/range-v3",
)
